<resources>
    <string name="app_name">Toura</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="toura_title">Toura Title</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="e_mail">E-mail</string>
    <string name="user_info_label">User Information</string>
    <string name="booking_history_label">Booking History</string>
    <string name="saved_favorites_label">Saved Favorites</string>
    <string name="loading_user_info">Loading user information...</string>
    <string name="no_booking_history">No booking history available.</string>
    <string name="no_saved_favorites">No saved favorites available.</string>
</resources>